syntax="proto3";

package playlist;

message PlaylistIDRequest {
    string id = 1;
}

message PlaylistIDResponse {
    string id = 1;
}

message CreatePlaylistRequest {
    string name = 1;
    repeated string songId = 2;
    string userId = 3;
}

message UpdatePlaylistRequest {
    string id = 1;
    string name = 2;
    repeated string songId = 3;
}

message PlaylistResponse {
    string id = 1;
    string name = 2;
    repeated string songId = 3;
    string userId = 4;
}

service PlaylistService {
    rpc GetPlaylist(PlaylistIDRequest) returns (PlaylistResponse);
    rpc CreatePlaylist(CreatePlaylistRequest) returns (PlaylistIDResponse);
    rpc UpdatePlaylist(UpdatePlaylistRequest) returns (PlaylistIDResponse);
    rpc DeletePlaylist(PlaylistIDRequest) returns (PlaylistIDResponse);
}